设置按钮图标即字号样式

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -3,3 +3,11 @@ html,body,#app{
     margin:0;
     padding:0;
 }
+
+/* 后台左侧按钮样式 */
+.el-menu-item, .el-submenu__title {
+    font-size: 13px;
+}
+.iconfont {
+    margin-right: 10px;
+}
