--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -24,7 +24,8 @@ body,
   box-shadow: 0 1px 1px rgba(0, 0, 0, .15)!important;
 }
 /* 设置表格样式 */
-.el-table {
+.el-table,
+.el-pagination {
     margin-top: 15px;
     font-size: 12px;
 }
